--- a/GMTK_Gamejam/Assembly-CSharp.csproj
+++ b/GMTK_Gamejam/Assembly-CSharp.csproj
@@ -58,7 +58,14 @@
     <Analyzer Include="D:\Projects\GMTK-Gamejam-2024\GMTK_Gamejam\Library\PackageCache\com.unity.entities\Unity.Entities\SourceGenerators\Unity.Entities.Analyzer.CodeFixes.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\1. Scripts\ECS\Authoring\CubeSpawnerAuthoring.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Systems\MovementSystem.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Systems\CubeSpawnerSystem.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\MovementComponent.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\CubeSpawnerComponent.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\WeightComponent.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Systems\WeightSystem.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:\GameEngines\Unity\6000.0.15f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
