Add the functionality to the dragging and dropping

--- a/GMTK_Gamejam/Assembly-CSharp.csproj
+++ b/GMTK_Gamejam/Assembly-CSharp.csproj
@@ -60,23 +60,25 @@
   <ItemGroup>
     <Compile Include="Assets\1. Scripts\zOLD\Authoring\CubeSpawnerAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Systems\MovementSystem.cs" />
-    <Compile Include="Assets\1. Scripts\zOLD\Components\Aspects\MovementAspect.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\OriginalPositionComponent.cs" />
+    <Compile Include="Assets\1. Scripts\zOLD\Components\Aspects\MovementAspect.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\DragNDropSystem.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Systems\Jobs\MoveEntityJob.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Components\MovementComponent.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Tags\ShouldStartSimulatingTag.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Authoring\Scoring\ScoreAuthoring.cs" />
-    <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Aspects\DraggingAspect.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Authoring\Bakers\CubeSpawnerBaker.cs" />
     <Compile Include="Assets\1. Scripts\Utility\ECS\RaycastHelper.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Components\CubeSpawnerComponent.cs" />
-    <Compile Include="Assets\1. Scripts\ECS\Systems\Jobs\DraggingJob.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Tags\ShouldStopSimulatingTag.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Tags\DraggableTag.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\DraggingSystem.cs" />
     <Compile Include="Assets\1. Scripts\General\UI\UIFunctionality.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Systems\EnablePhysicsSystem.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Systems\CubeSpawnerSystem.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Tags\IsDraggedTag.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Authoring\ShapeAuthoring.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Systems\DisablePhysicsSystem.cs" />
     <Compile Include="Assets\1. Scripts\General\DebugInfo\UI\DebugTextManager.cs" />
     <Compile Include="Assets\1. Scripts\ScoreManager.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\ScoringComponent.cs" />
