Add a system to move fallen shapes back to the clipboard

--- a/GMTK_Gamejam/Assembly-CSharp.csproj
+++ b/GMTK_Gamejam/Assembly-CSharp.csproj
@@ -61,15 +61,19 @@
     <Compile Include="Assets\1. Scripts\zOLD\Authoring\CubeSpawnerAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\MovementSpeedComponent.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Systems\MovementSystem.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Systems\DisableIntertiaSystem.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\OriginalPositionComponent.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Components\Aspects\MovementAspect.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\DragNDropSystem.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\ClipboardComponent.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Systems\Jobs\MoveEntityJob.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\MoveBackIfFallen\Aspect\PotentialFallenBlockAspect.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\MoveBackTowardsOriginalPositionSystem.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Authoring\HeightMeasurer\HeightMeasureAreaAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\HeightMeasureSystem.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Components\MovementComponent.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\PhysicsSimulation\Tags\ShouldDisableInertiaXYTag.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Authoring\PlatformAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Authoring\ClipboardAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Authoring\Scoring\ScoreAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Authoring\Bakers\CubeSpawnerBaker.cs" />
@@ -77,12 +81,13 @@
     <Compile Include="Assets\1. Scripts\zOLD\Components\CubeSpawnerComponent.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\Enums\MultiplierName.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\HeightMeasurer\HeightReachedComponent.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\ShouldMoveBackTowardsOriginalPositionComponent.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\HeightMeasurer\Tags\ShouldMeasureHeight.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\HeightMeasurer\HeightMeasureAreaComponent.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Tags\DraggableTag.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\DraggingSystem.cs" />
     <Compile Include="Assets\1. Scripts\General\UI\UIFunctionality.cs" />
-    <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Tags\ShouldMoveBackTowardsOriginalPositionTag.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Systems\MoveFallenShapesBackSystem.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\PhysicsSimulation\Tags\ShouldStopSimulatingTag.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\EnablePhysicsSystem.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Systems\CubeSpawnerSystem.cs" />
