Ensure the raycasts work properly from the given graph points

--- a/GMTK_Gamejam/Assembly-CSharp.csproj
+++ b/GMTK_Gamejam/Assembly-CSharp.csproj
@@ -69,7 +69,6 @@
     <Compile Include="Assets\1. Scripts\zOLD\Systems\Jobs\MoveEntityJob.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\MoveBackIfFallen\Aspect\PotentialFallenBlockAspect.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\MoveBackTowardsOriginalPositionSystem.cs" />
-    <Compile Include="Assets\1. Scripts\ECS\Authoring\HeightMeasurer\HeightMeasureAreaAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\HeightMeasureSystem.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Components\MovementComponent.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\PhysicsSimulation\Tags\ShouldDisableInertiaXYTag.cs" />
@@ -77,18 +76,20 @@
     <Compile Include="Assets\1. Scripts\ECS\Authoring\ClipboardAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Authoring\Scoring\ScoreAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Authoring\Bakers\CubeSpawnerBaker.cs" />
+    <Compile Include="Assets\1. Scripts\Gameplay\HeightMeasurement\HeightMeasurementAreasManager.cs" />
     <Compile Include="Assets\1. Scripts\Audio\SFXAudioPlayer.cs" />
     <Compile Include="Assets\1. Scripts\Utility\ECS\RaycastHelper.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Components\CubeSpawnerComponent.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\Enums\MultiplierName.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\HeightMeasurer\HeightReachedComponent.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\ShouldMoveBackTowardsOriginalPositionComponent.cs" />
-    <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\HeightMeasurer\HeightMeasureAreaComponent.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Tags\DraggableTag.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\Events\DraggingEvents.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\DraggingSystem.cs" />
     <Compile Include="Assets\1. Scripts\General\UI\UIFunctionality.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\MoveFallenShapesBackSystem.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\HeightMeasurer\HeightMeasurementAreasManagerComponent.cs" />
+    <Compile Include="Assets\1. Scripts\Gameplay\Structs\ScoreAreaRaycastData.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\PhysicsSimulation\Tags\ShouldStopSimulatingTag.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\Events\HeightReachedEvent.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\HeightMeasurement\ReadyButton.cs" />
